# agx-ros2-collection

./: .gitignore  README.md  start_panda_simulation.bat
agx_any_builder_parser/: CMakeLists.txt  package.xml
agx_any_builder_parser/include/agx_any_builder_parser/: AnyMessageBuilder.h  AnyMessageParser.h
agx_any_builder_parser/src/: AnyMessageBuilder.cpp  AnyMessageParser.cpp
agx_any_message/: ReadMe.md
agx_any_message/agx_msgs/: CMakeLists.txt  package.xml
agx_any_message/agx_msgs/msg/: Any.msg
agx_any_msg_example/: CMakeLists.txt  package.xml
agx_any_msg_example/src/: AnyMsgReceiveExample.cpp  AnyMsgSendExample.cpp
agx_any_ws/: ReadMe.md
agx_any_ws/src/agx_any_builder_parser/: CMakeLists.txt
agx_any_ws/src/agx_any_builder_parser/include/agx_any_builder_parser/: AnyMessageBuilder.h
agx_any_ws/src/agx_any_builder_parser/src/: AnyMessageBuilder.cpp
agx_any_ws/src/agx_any_msg_example/src/: AnyMsgReceiveExample.cpp
agx_any_ws/src/agx_msgs/: CMakeLists.txt  package.xml
agx_msgs/: CMakeLists.txt  package.xml
agx_msgs/msg/: Any.msg
agx_tutorial_resources/agx_tutorial_resources_panda_description/: package.xml
agx_tutorial_resources/agx_tutorial_resources_panda_description/urdf/: panda.urdf
agx_tutorial_resources/agx_tutorial_resources_panda_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
agx_tutorial_resources/agx_tutorial_resources_panda_moveit_config/config/: panda.ros2_control.xacro  panda.urdf.xacro  panda_hand.ros2_control.xacro  ros2_controllers_effort.yaml
agx_tutorial_resources/agx_tutorial_resources_panda_moveit_config/launch/: demo.launch.py
agx_tutorial_resources/panda_description/: CMakeLists.txt  README.md
agx_tutorial_resources/panda_description/urdf/: panda.urdf  panda.urdf.xacro
agx_tutorial_resources/panda_moveit_config/: CMakeLists.txt  package.xml
agx_tutorial_resources/panda_moveit_config/config/: panda.ros2_control.xacro  panda.urdf.xacro  ros2_controllers.yaml
agx_tutorials/: CMakeLists.txt  package.xml
agx_tutorials/config/: panda_moveit_config.rviz
agx_tutorials/launch/: panda_agx_simulation.py  panda_demo_effort_launch.py  panda_demo_launch.py  panda_demo_no_simulation_launch.py
agx_tutorials/src/: move_in_square.cpp
