<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agx_any_msg_example</name>
  <version>1.3.0</version>
  <description>Package containing an example of how to use the AnyMessageBuilder and AnyMessageParser to send and receive custom data types.</description>
  <maintainer email="josef.holmner@algoryx.com">Admin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>agx_msgs</depend>
  <depend>agx_any_builder_parser</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
